# ribabari

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  README.pt.md  constants.h  main  main.c  synt1  synt2  synt3  synt4
cpu/: cpu.c  cpu.h
disk/: disk.c  disk.h
file/: file.c  file.h
io/: print.c  print.h
kernel/: kernel.c  kernel.h
memory/: memory.c  memory.h
process/: instruction.c  instruction.h  process.c  process.h
sched/: sched.c  sched.h
semaphore/: semaphore.c  semaphore.h
synth/: instr_parser.c  instr_parser.h  synth.c  synth.h
terminal/: log.c  log.h  terminal.c  terminal.h
tools/: constants.h  list.c  list.h
utils/: list.c  list.h  math.h
